[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catime"
version = "0.4.7"
description = "AI-generated hourly cat images - a new cat every hour!"
readme = "README.md"
requires-python = ">=3.11,<4"
license = "MIT"
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "ruff>=0.4,<1",
]

[project.scripts]
catime = "catime.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/catime"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "catime/docs"

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
